--- a/css/todo.css
+++ b/css/todo.css
@@ -32,6 +32,7 @@ body {
   height: 40px;
   text-align: center;
   font-size: 30px;
+  color: #fff;
   border: none;
   border-bottom: 2px solid #dbdbdb;
   background-color: transparent;
